fix: #973 fixed gaps in adaptive modal window for labels

--- a/mw-webapp/src/logic/wayPage/labels/AdjustLabelsModalContent.module.scss
+++ b/mw-webapp/src/logic/wayPage/labels/AdjustLabelsModalContent.module.scss
@@ -1,5 +1,9 @@
 @import "src/styles/variables";
 
 .adjustLabelsContent {
-  gap: $gapMedium;
+  gap: $gapSmall;
+
+  @media only screen and (max-width: $mediaWidthTablet) {
+    gap: $gapBig;
+  }
 }
